--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,22 +12,23 @@
   </head>
 
   <body>
-<nav class="navbar navbar-default">
-  <a class="navbar-brand" href="#">SimpleBlog</a>
-  
 
-  <div class="">
-    <ul class="navbar-nav">
-       
-      
-      <li class="nav-item">
-        <%= link_to "Home" , root_path %>
-      </li>
-       
-    </ul>
-     
-  </div>
-</nav>
-    <%= yield %>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container">
+        <a class="navbar-brand" href="#">Navbar</a>
+
+        <div class=" " id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li><%= link_to "Home" , home_path,{:class => 'mr-3'} %></li>
+            <li><%= link_to "About" , about_path, {:class => 'mx-3'} %></li>
+            <li><%= link_to "Create Post" , new_post_path {:class => 'mx-3'} %></li>
+          </ul>
+
+        </div>
+      </div>
+    </nav>
+    <div class="container">
+      <%= yield %>
+    </div>
   </body>
 </html>
