--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,14 +1,22 @@
-<h1>Add Post</h1> 
-<%= form_for :post, url: posts_path do |f| %>
-<p>
-  <%= f.label :title %><br/>
-  <%= f.text_field :title %>
-</p>
+<h6 class="display-6">
 
-<p>
-  <%= f.label :body %><br/>
-  <%= f.text_area :body %>
-</p>
-<p><%= f.submit %></p>
+  Add Post
+</h6>
+<%= form_for :post, url: posts_path do |f| %>
+ <% if @post.errors.any? %>
+  <% @post.errors.full_messages.each do |msg| %>
+  <div class=""><%= msg %></div>
+  <% end %>
+  <% end %>
+  <p>
+    <%= f.label(:title, {:class => 'form-label'}) %><br/>
+    <%= f.text_field(:title, {:class => 'form-control'}) %>
+  </p>
+
+  <p>
+    <%= f.label(:body, {:class => 'form-label'}) %><br/>
+    <%= f.text_area(:body, {:class => 'form-control'}) %>
+  </p>
+  <p><%= f.submit({:class => 'btn btn-primary'}) %></p>
 
 <% end %>
