edit delete functionality

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,15 +1,13 @@
 <h1 class="display-6 my-4">Blog Posts</h1>
 
-<div class="">
+<div class="well">
   <% @posts.each do |post| %>
- 
-
     <div class="card mx-2 col-md-12 my-2">
       <div class="card-body">
         <h5 class="card-title"><%= post.title %>
         </h5>
         <p class="card-text"><%= post.body %></p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <%= link_to "Read Post" , post_path(post) , :class=>'btn btn-primary' %>
       </div>
     </div>
   <% end %>
