--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,4 +3,31 @@
 <hr>
 <%= link_to "Edit Post" , edit_post_path(@post), :class => 'btn btn-success' %>
 <%= link_to "Delete Post" , post_path(@post), method: :delete,
-data: {title: 'Are you sure?'}, :class => 'btn btn-danger' %>
+data: {confirm: 'Are you sure?'}, :class => 'btn btn-danger' %>
+<hr>
+<h3>Comments</h3>
+
+<% @post.comments.each do |comment| %>
+  <div class="well">
+    <p><strong><%= comment.username %></strong>
+      :
+      <%= comment.body %></p>
+      <%= link_to "Delete Comment" , post_path(comment),method: :delete , :class=>'btn btn-danger' %>
+  </div>
+<% end %>
+
+<h3>Add Comment</h3>
+
+<%= form_for ([@post, @post.comments.build]) do |f| %>
+  <p>
+    <%= f.label(:username, {:class => 'form-label'}) %><br/>
+    <%= f.text_field(:username, {:class => 'form-control'}) %>
+  </p>
+
+  <p>
+    <%= f.label(:body, {:class => 'form-label'}) %><br/>
+    <%= f.text_area(:body, {:class => 'form-control'}) %>
+  </p>
+  <p><%= f.submit({:class => 'btn btn-primary'}) %></p>
+
+<% end %>
